fix extra quotes #24 sbt 0.13